[tool.poetry]
name = "echovr-tray-tool"
version = "0.1.0"
description = "A small background application for enhancing your experience with Echo VR"
authors = ["Ajedi32 <ajedi32.web@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
